--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #f0f0f0;
+      background: #7c7373;
     }
 
     .car-container {
